syntax = "proto3";

option csharp_namespace = "Notifications";

package notifications;

service Greeter {
  rpc GetNotificationsTotals (NotificationsTotalsRequest) returns (NotificationsTotalsResponse);
}


message NotificationsTotalsRequest {
  string UserId = 1;
}

message  NotificationsTotalsResponse {
  NotificationTotals SMSs = 1;
  NotificationTotals Emails = 2;
}

message NotificationTotals {
  int32 TotalNoSent = 1;
  int32 TotalPending = 2;
  int32 TotalSent = 3;
  int32 TotalFailed = 4;
}